[gd_scene load_steps=2 format=3 uid="uid://crgps00001"]

[ext_resource type="Script" path="res://scenes/ui/gps.gd" id="1_gps"]

[node name="GPS" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gps")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Navigating..."

[node name="RouteLine" type="Control" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="DestinationLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "No destination"
horizontal_alignment = 1

[node name="ETALabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1

[node name="GlitchOverlay" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 0.1)
